test/arrays/deitz/part7/test_illegal_rank_change.good
test_illegal_rank_change.chpl:6: error: rank mismatch: cannot reindex() from 2 dimension(s) to 1
